# watsonx-developer-hub

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CODE_OF_CONDUCT.md  MAINTAINERS.md  README.md
.github/workflows/: deploy-agent.yaml  pr-checks.yaml  run-tests.yaml
agents/: CODE_OF_CONDUCT.md  README.md
agents/base/autogen-agent/: CHANGES.rst  README.md  ai_service.py  config.toml.example  pyproject.toml  utils.py
agents/base/autogen-agent/examples/: _interactive_chat.py  execute_ai_service_locally.py
agents/base/autogen-agent/scripts/: deploy.py
agents/base/autogen-agent/src/autogen_agent_base/: agent.py
agents/base/autogen-agent/tests/: test_tools.py
agents/base/beeai-framework-react-agent/: README.md  ai_service.py  config.toml  config.toml.example  pyproject.toml  template.env
agents/base/beeai-framework-react-agent/examples/: execute_ai_service_locally.py
agents/base/beeai-framework-react-agent/src/beeai_framework_react_agent_base/: agent.py  tools.py
agents/base/beeai-framework-react-agent/tests/: test_tools.py
agents/base/beeai-framework-requirement-agent/: CHANGES.rst  README.md  ai_service.py  pyproject.toml  template.env  utils.py
agents/base/beeai-framework-workflow/: CHANGES.rst  README.md  ai_service.py  config.toml.example  pyproject.toml  template.env
agents/base/beeai-framework-workflow/examples/: _interactive_chat.py  execute_ai_service_locally.py  query_existing_deployment.py
agents/base/beeai-framework-workflow/schema/: response.json
agents/base/beeai-framework-workflow/scripts/: deploy.py
agents/base/beeai-framework-workflow/src/beeai_framework_workflow_base/: workflow.py
agents/base/crewai-websearch-agent/: CHANGES.rst  README.md  ai_service.py  config.toml.example  pyproject.toml
agents/base/crewai-websearch-agent/examples/: _interactive_chat.py  execute_ai_service_locally.py  query_existing_deployment.py
agents/base/crewai-websearch-agent/schema/: request.json
agents/base/crewai-websearch-agent/scripts/: deploy.py
agents/base/crewai-websearch-agent/src/crewai_web_search/config/: agents.yaml  tasks.yaml
agents/base/crewai-websearch-agent/src/crewai_web_search/tools/: custom_tool.py
agents/base/langgraph-react-agent/: CHANGES.rst  README.md  ai_service.py  config.toml.example  pyproject.toml  template.env
agents/base/llamaindex-websearch-agent/: CHANGES.rst  README.md  ai_service.py  config.toml.example  pyproject.toml  utils.py
agents/base/llamaindex-websearch-agent/examples/: _interactive_chat.py  query_existing_deployment.py
agents/base/llamaindex-websearch-agent/scripts/: deploy.py
agents/base/llamaindex-websearch-agent/src/llama_index_workflow_agent_base/: workflow.py
agents/community/langgraph-agentic-rag/: CHANGES.rst  README.md  ai_service.py  config.toml.example  pyproject.toml
agents/community/langgraph-agentic-rag-multisource-retrieval/: README.md
agents/community/langgraph-agentic-rag/examples/: execute_ai_service_locally.py
agents/community/langgraph-agentic-rag/scripts/: deploy.py
agents/community/langgraph-agentic-rag/src/langgraph_agentic_rag/: __init__.py  agent.py  tools.py
agents/community/langgraph-agentic-rag/src/langgraph_react_agent_base/: __init__.py  agent.py  tools.py
agents/community/langgraph-agentic-rag/tests/: test_tools.py
agents/community/langgraph-arxiv-research/: CHANGES.rst  LICENSE  README.md  ai_service.py  config.toml.example  pyproject.toml
agents/community/langgraph-arxiv-research-model-gateway/: CHANGES.rst  README.md  config.toml.example  pyproject.toml  template.env
agents/community/langgraph-arxiv-research-model-gateway/src/langgraph_react_agent_model_gateway/: tools.py
agents/community/langgraph-arxiv-research-model-gateway/tests/: test_tools.py
agents/community/langgraph-arxiv-research/examples/: _interactive_chat.py
agents/community/langgraph-arxiv-research/scripts/: deploy.py
agents/community/langgraph-arxiv-research/src/langgraph_react_agent/: agent.py
agents/community/langgraph-arxiv-research/tests/: test_tools.py
agents/community/langgraph-evaluation/: pyproject.toml
agents/community/langgraph-evaluation-wikipedia-tool-agent/: README.md  pyproject.toml
agents/community/langgraph-graph-rag/: CHANGES.rst  README.md  ai_service.py  config.toml.example  pyproject.toml  template.env
agents/community/langgraph-graph-rag/scripts/: create_knowledge_graph.py
agents/community/langgraph-graph-rag/src/langgraph_graph_rag/: agent.py  nodes.py  tools.py
agents/community/langgraph-human-in-the-loop/: CHANGES.rst  README.md  ai_service.py  config.toml.example  pyproject.toml  utils.py
agents/community/langgraph-human-in-the-loop/examples/: _interactive_chat.py  query_existing_deployment.py
agents/community/langgraph-human-in-the-loop/schema/: request.json  response.json
agents/community/langgraph-human-in-the-loop/src/langgraph_hitl/: agent.py  tools.py
agents/community/langgraph-human-in-the-loop/tests/: test_tools.py
agents/community/langgraph-react-with-database-memory/: README.md  ai_service.py  config.toml.example  example_payload.json  pyproject.toml  (+1 more)
agents/community/langgraph-tavily-tool/: README.md  ai_service.py  config.toml.example  pyproject.toml  utils.py
agents/community/langgraph-tavily-tool/examples/: _interactive_chat.py
agents/community/langgraph-tavily-tool/schema/: response.json
agents/community/langgraph-tavily-tool/src/langgraph_tavily_tool/: __init__.py  agent.py  tools.py
agents/langgraph/: README.md
mcp/watsonx-mcp-autoai/: README.md  Use watsonx, and MCP server to invoke on AutoAI deployment.ipynb  mcp_server.py  utils.py
tests/: conftest.py  container_utils.py  create_test_venv_with_uv.sh  example.pytest.ini  requirements.txt  test_agents.py  test_mcp.py  utils.py
tests/data/: credit_risk_training_light.csv
watsonxai-instructlab-starter-kits/: readme.md
watsonxai-instructlab-starter-kits/Anti Money Laundering/: readme.md
watsonxai-instructlab-starter-kits/EU AI act/: qna.yaml  readme.md
watsonxai-instructlab-starter-kits/SDLC - Test case generation/: readme.md
(+80 files in other folders)
