[tool.poetry]
name = "autogen_agent_base"
version = "0.1.0"
description = "A template for a Autogen app deployable on IBM Cloud as an ai_service. This particular example focuses on a WatsonX chatbot enhanced with external tools (function calling)."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "autogen_agent_base", from = "src" }
]


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
autogen = "^0.9.7"
autogen-agentchat = "^0.5.0"
autogen-core = "^0.5.0"
autogen-ext = "^0.5.0"
autogen_watsonx_client = "^0.0.8"
ibm-watsonx-ai = "^1.5.0"
nest_asyncio = "^1.6.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ibm-watsonx-ai-cli = ">=0.4.0"
pytest = "^8.3.3"
numpy = "<2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
