[tool.poetry]
name = "beeai_framework_react_agent_base"
version = "0.1.0"
description = "A template for a beeai-framework LLM app deployable on IBM Cloud as an ai_service."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "beeai_framework_react_agent_base", from = "src" }
]


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
beeai-framework = "^0.1.4"
python-dotenv = "^1.0.1"
ibm-watsonx-ai = { version = ">=1.1.22", python = ">=3.11,<3.13" }
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
