[tool.poetry]
name = "crewai-web-search"
version = "0.1.0"
description = "A template for a CrewAI LLM app deployable on IBM Cloud as an ai_service. This particular example focuses on a WatsonX chatbot enhanced with external tools (function calling)."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "crewai_web_search", from = "src" }
]


[tool.poetry.dependencies]
python = ">=3.11,<3.14"
crewai = "^1.6.1"
litellm = "^1.81.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ibm-watsonx-ai-cli = ">=0.3.0"
ibm-watsonx-ai = "^1.5.0"
ibm-watson-openscale = "3.1.2"
pytest = "^8.3.3"
numpy = "<2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
