[tool.poetry]
name = "llama_index_workflow_agent_base"
version = "0.1.0"
description = "A template for a LlamaIndex LLM app deployable on IBM Cloud as an ai_service. This particular example focues on a WatsonX chatbot enhanced with external tools (function calling)."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "llama_index_workflow_agent_base", from = "src" }
]


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
llama-index = "^0.14.2"
llama-index-core = "^0.14.2"
llama-index-llms-ibm = "^0.6.1"
llama-index-utils-workflow = "^0.8.0"
ibm-watsonx-ai = "^1.5.0"
numpy = "<2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ibm-watsonx-ai-cli = ">=0.4.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
