[tool.poetry]
name = "langgraph_agentic_rag"
version = "0.1.1"
description = "A template for an Agentic RAG LangGraph app deployable on IBM Cloud as an ai_service. This particular example focuses on a WatsonX chatbot enhanced with watsonx Utility Agent Tool 'RAGQuery'."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "langgraph_agentic_rag", from = "src" }
]


[tool.poetry.dependencies]
python = ">=3.11,<3.14"
langchain-ibm = "^0.3.20"
ibm-watsonx-ai = "^1.5.0"
langgraph = "^0.6.11"
langchain = "^0.3.27"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ibm-watsonx-ai-cli = ">=0.4.1"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
