[tool.poetry]
name = "langgraph_agentic_rag"
version = "0.1.2"
description = "A template for an Agentic RAG LangGraph app deployable on IBM Cloud as an ai_service. This particular example focuses on a WatsonX chatbot enhanced with RAG tool."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "langgraph_agentic_rag", from = "src" }
]


[tool.poetry.dependencies]
python = ">=3.11,<3.14"
ibm-watsonx-ai = { extras = ["rag"], version = "^1.5.0" }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ibm-watsonx-ai-cli = ">=0.4.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
