[tool.poetry]
name = "langgraph_react_agent"
version = "0.1.7"
description = "A template for a LangGraph LLM app deployable on IBM Cloud as an ai_service. This particular example focues on a WatsonX chatbot enhanced with external tools (function calling)."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "langgraph_react_agent", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
langchain-ibm = "^0.3.20"
ibm-watsonx-ai = "^1.5.0"
langgraph = "^0.6.11"
statsmodels = "^0.14.4"
langchain-community = "^0.3.29"
ddgs = "^9.5.5"
markdownify = "^1.1.0"
httpx = "^0.28.1"
beautifulsoup4 = "^4.13.5"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ibm-watsonx-ai-cli = ">=0.3.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
