[tool.poetry]
name = "langgraph_hitl"
version = "0.1.0"
description = "A template for a LangGraph LLM app deployable on IBM Cloud as an ai_service. This particular example focues on a WatsonX chatbot enhanced with external tools (function calling)."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "langgraph_hitl", from = "src" }
]


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain-ibm = "^0.3.7"
ibm-watsonx-ai = { version = ">=1.3.5", python = ">=3.11,<3.13" }
langgraph = ">=0.2.76,<0.3"
langchain-community = "^0.3.17"
ddgs = "^9.5.5"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ibm-watsonx-ai-cli = ">=0.3.0"
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
